# SimpleRenderEngineProject

./: CMakeLists.txt
ExamProject/: CMakeLists.txt  main.cpp
Exercise10/ExampleGame/data/: scene.json
Exercise8/Engine/Engine/: GameObject.cpp
Exercise8/Engine/Engine/Components/: ComponentPhysicsBody.cpp  ComponentPhysicsBody.h
Exercise8/ExampleGame/Game/: ComponentController.cpp  ComponentController.h
Exercise8/ExampleGame/data/: scene.json
PlatformerProject/: README.md
PlatformerProject/Engine/: CMakeLists.txt
PlatformerProject/Engine/Engine/: Component.h  GameObject.h  MyEngine.cpp  MyEngine.h
PlatformerProject/Engine/Engine/Components/: ComponentCamera.cpp  ComponentPhysicsBody.cpp  ComponentPhysicsBody.h  VerticalCamera.cpp  VerticalCamera.h
PlatformerProject/ExampleGame/: main.cpp
PlatformerProject/ExampleGame/Game/: ComponentController.cpp  ComponentController.h  ComponentFollowTarget.cpp  ComponentFollowTarget.h  ComponentJetpack.cpp  ComponentJetpack.h  ComponentPlatform.cpp  ComponentPlatformBounce.cpp  ComponentPlatformBounce.h  ComponentPlatformMove.cpp
PlatformerProject/ExampleGame/data/: bunny-art.json  rootscene(for comparison).json  scene.json
